fixed flickering issue

--- a/common/common.scss
+++ b/common/common.scss
@@ -298,7 +298,7 @@ sup {
 }
 
 // fix display flickering issue https://community.qnap.com/t/forum-display-bug/476
-html.mobile-view {
+html.discourse-touch {
   #topic-progress-wrapper,
   section.topic-map__contents {
     display: none;
